# OC_P12_EPIC_EVENTS_CLI

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml  pytest.yml
flake8_html_report/: index.html
mission/: schéma BDD.drawio
requirements/: dev.txt  dev_freeze.txt  test.txt  test_freeze.txt
src/controllers/: collaborator.py  contract.py  customer.py  event.py  home.py  login.py
src/forms/: collaborator.py  company.py  contract.py  customer.py  department.py  event.py  location.py  str_template.py
src/models/: abstract.py  bruteforce.py  collaborator.py  company.py  contract_event.py  customer.py  department.py  location.py
src/settings/: settings.py
src/utils/: fernet.py  jwt_token.py  session.py  shell.py  slugify.py
src/views/: collaborator.py  contract.py  customer.py  event.py  home.py  login.py  mixin.py
tests/: __init__.py
tests/controllers/: test_collaborator.py  test_contract.py  test_customer.py  test_event.py  test_home.py  test_login.py
tests/forms/: test_collaborator.py  test_company.py  test_contract.py  test_customer.py  test_department.py  test_event.py  test_location.py
tests/models/: test_bruteforce.py  test_collaborator.py  test_company.py  test_contract.py  test_customer.py  test_department.py  test_event.py  test_location.py
tests/views/: test_collaborator.py  test_contract.py  test_customer.py  test_event.py  test_home.py  test_login.py  test_mixin.py
